2.2.5/_sources/gallery/images_contours_and_fields/plot_streamplot.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_images_contours_and_fields_plot_streamplot.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_images_contours_and_fields_plot_streamplot.py:


==========
Streamplot
==========

A stream plot, or streamline plot, is used to display 2D vector fields. This
example shows a few features of the :meth:`~.axes.Axes.streamplot` function:

    * Varying the color along a streamline.
    * Varying the density of streamlines.
    * Varying the line width along a streamline.
    * Controlling the starting points of streamlines.
    * Streamlines skipping masked regions and NaN values.


.. code-block:: default

    import numpy as np
    import matplotlib.pyplot as plt
    import matplotlib.gridspec as gridspec

    w = 3
    Y, X = np.mgrid[-w:w:100j, -w:w:100j]
    U = -1 - X**2 + Y
    V = 1 + X - Y**2
    speed = np.sqrt(U*U + V*V)

    fig = plt.figure(figsize=(7, 9))
    gs = gridspec.GridSpec(nrows=3, ncols=2, height_ratios=[1, 1, 2])

    #  Varying density along a streamline
    ax0 = fig.add_subplot(gs[0, 0])
    ax0.streamplot(X, Y, U, V, density=[0.5, 1])
    ax0.set_title('Varying Density')

    # Varying color along a streamline
    ax1 = fig.add_subplot(gs[0, 1])
    strm = ax1.streamplot(X, Y, U, V, color=U, linewidth=2, cmap='autumn')
    fig.colorbar(strm.lines)
    ax1.set_title('Varying Color')

    #  Varying line width along a streamline
    ax2 = fig.add_subplot(gs[1, 0])
    lw = 5*speed / speed.max()
    ax2.streamplot(X, Y, U, V, density=0.6, color='k', linewidth=lw)
    ax2.set_title('Varying Line Width')

    # Controlling the starting points of the streamlines
    seed_points = np.array([[-2, -1, 0, 1, 2, -1], [-2, -1,  0, 1, 2, 2]])

    ax3 = fig.add_subplot(gs[1, 1])
    strm = ax3.streamplot(X, Y, U, V, color=U, linewidth=2,
                         cmap='autumn', start_points=seed_points.T)
    fig.colorbar(strm.lines)
    ax3.set_title('Controlling Starting Points')

    # Displaying the starting points with blue symbols.
    ax3.plot(seed_points[0], seed_points[1], 'bo')
    ax3.axis((-w, w, -w, w))

    # Create a mask
    mask = np.zeros(U.shape, dtype=bool)
    mask[40:60, 40:60] = True
    U[:20, :20] = np.nan
    U = np.ma.array(U, mask=mask)

    ax4 = fig.add_subplot(gs[2:, :])
    ax4.streamplot(X, Y, U, V, color='r')
    ax4.set_title('Streamplot with Masking')

    ax4.imshow(~mask, extent=(-w, w, -w, w), alpha=0.5,
              interpolation='nearest', cmap='gray', aspect='auto')
    ax4.set_aspect('equal')

    plt.tight_layout()
    plt.show()



.. image:: /gallery/images_contours_and_fields/images/sphx_glr_plot_streamplot_001.png
    :class: sphx-glr-single-img





------------

References
""""""""""

The use of the following functions and methods is shown in this example:


.. code-block:: default


    import matplotlib
    matplotlib.axes.Axes.streamplot
    matplotlib.pyplot.streamplot
    matplotlib.gridspec
    matplotlib.gridspec.GridSpec








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.142 seconds)


.. _sphx_glr_download_gallery_images_contours_and_fields_plot_streamplot.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: plot_streamplot.py <plot_streamplot.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: plot_streamplot.ipynb <plot_streamplot.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
